# git-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.github/workflows/scripts/: build.sh  check-release.sh  create-gh-release.sh  create-release-packages.sh  get-version.sh
docs/: index.md  quickstart.md
memory/: constitution.md
scripts/bash/: common.sh  create-charter.sh  create-design.sh  create-notes.sh  create-pr.sh  create-release.sh  create-retro.sh  create-workflow.sh
scripts/powershell/: common.ps1  create-charter.ps1  create-design.ps1  create-notes.ps1  create-pr.ps1  create-release.ps1  create-retro.ps1  create-workflow.ps1
src/gitkit_cli/: main.py
src/gitkit_cli/commands/: init.py  pr.py  release.py  status.py
templates/: agent-file-template.md  agent-file-template.toml  charter.md  design-doc.md  pr.md  qwen-file-template.md  release-notes.md  release.md  retro-template.md  workflow.md
templates/commands/: charter.md  design.md  notes.md  pr.md  release.md  retro.md  workflow.md
